--- a/03Express/package.json
+++ b/03Express/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "01-express.js",
   "scripts": {
-    "start": "node 01-express"
+    "start": "node 01-express",
+    "dev": "npx nodemon 01-express"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.2.1"
   }
 }
